// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`line.sql > line 7 1`] = `
[
  "CREATE TABLE LINE_TBL (s line)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "line_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "s",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "line",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`line.sql > line 9 1`] = `
[
  "INSERT INTO LINE_TBL VALUES ('{0,-1,5}')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "line_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 29,
                            "sval": {
                              "sval": "{0,-1,5}",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`line.sql > line 22 1`] = `
[
  "INSERT INTO LINE_TBL VALUES (line(point '(3,1)', point '(3,2)'))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "line_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 40,
                                      "sval": {
                                        "sval": "(3,1)",
                                      },
                                    },
                                  },
                                  "location": -1,
                                  "typeName": {
                                    "location": 34,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "point",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 55,
                                      "sval": {
                                        "sval": "(3,2)",
                                      },
                                    },
                                  },
                                  "location": -1,
                                  "typeName": {
                                    "location": 49,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "point",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "line",
                                },
                              },
                            ],
                            "location": 29,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`line.sql > line 39 1`] = `
[
  "select * from LINE_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "line_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`line.sql > line 41 1`] = `
[
  "select '{nan, 1, nan}'::line = '{nan, 1, nan}'::line as true,
	   '{nan, 1, nan}'::line = '{nan, 2, nan}'::line as false",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "{nan, 1, nan}",
                              },
                            },
                          },
                          "location": 22,
                          "typeName": {
                            "location": 24,
                            "names": [
                              {
                                "String": {
                                  "sval": "line",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 29,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 31,
                              "sval": {
                                "sval": "{nan, 1, nan}",
                              },
                            },
                          },
                          "location": 46,
                          "typeName": {
                            "location": 48,
                            "names": [
                              {
                                "String": {
                                  "sval": "line",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 66,
                  "name": "false",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 66,
                              "sval": {
                                "sval": "{nan, 1, nan}",
                              },
                            },
                          },
                          "location": 81,
                          "typeName": {
                            "location": 83,
                            "names": [
                              {
                                "String": {
                                  "sval": "line",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 88,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 90,
                              "sval": {
                                "sval": "{nan, 2, nan}",
                              },
                            },
                          },
                          "location": 105,
                          "typeName": {
                            "location": 107,
                            "names": [
                              {
                                "String": {
                                  "sval": "line",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`line.sql > line 45 1`] = `
[
  "SELECT pg_input_is_valid('{1, 1}', 'line')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "{1, 1}",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": "line",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
